--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "festivosapi",
   "version": "1.0.0",
   "description": "Api festivos españa",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
