--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "luxon": "^1.24.1",
     "monk": "^7.3.1",
     "morgan": "^1.10.0"
   }
