--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Api festivos españa",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
